--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/fauria/wunderground-pws#readme",
   "devDependencies": {
     "chai": "^3.3.0",
+    "codecov.io": "^0.1.6",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3"
   }
