--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,6 @@ node_js:
   - "stable"
   - "iojs"
 script:
-  - istanbul cover node_modules/mocha/bin/_mocha
+  - node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha
 after_success:
   - bash <(curl -s https://codecov.io/bash)
