--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/fauria/wunderground-pws#readme",
   "devDependencies": {
     "chai": "^3.3.0",
+    "istanbul": "^0.4.0",
     "jshint": "^2.8.0",
     "mocha": "^2.3.3"
   }
